--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">=4.2.1"
   },
   "keywords": [],
-  "licenses": "MIT",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.11.4",
